## Change history

* (fixed) If while reading a DXF the Layer Lineweight value is invalid it will change it to the Default.
* (fixed) If while reading a DXF the Layer Color value is invalid it will change it to the Default.
* (fixed) In the TrueTypeFamily method in TextStyle class, the PrivateFontCollection.AddFontFile might also fail if the font is incompatible. Also delete unnecessary check if the file exists.

### [2.2.1 - 2018/10/17]
* Improved the MText.PlainText() method to reflect the latest formatting changes.
* Added MTextParagraphVerticalAlignment enum that controls how fractions, superscripts, subscripts, and characters of different heights are placed in a paragraph line. 
* Added method WriteFraction() to help adding fractions into the text of a MText entity.
* Substitute, what seems and old code, "^J" with the new paragraph code "\\P" in the text of MText entities.
* The MTextFormattingOptions constructor does not require an instance of a TextStyle.
* Updated "netDXF Documentation.chm".
* Reworked how the text of an MText entity is formatted. See MTextParagraphFormatting() and MTextCharacterFormatting() sample.
* Added the class MTextParagraphOptions that holds the paragraph properties of the MText text.
* Added MText StartParagraph method that optionally takes an instance of the MTextParagraphOptions class.
* Added Superscript and Subscript properties to the MTextFormattingOptions class.
* Added Hatch pattern method NamesFromFile and Save, the functionality is similar as the methods in the Linetype class but instead of working with LIN files they work with PAT files.
* Rename HatchPattern method FromFile to Load, to accommodate to the same nomenclature as its equivalent in the Linetype class.
* (fixed) Remove ArgumentOutOfRangeException exception in the LinetypeShapeSegment and LinetypeTextSegment Scale property, negative values are allowed. Zero values are also allowed even thought they should not be used.