@@ -1,7 +1,7 @@
-﻿#region netDxf library, Copyright (C) 2009-2018 Daniel Carvajal (haplokuon@gmail.com)
+﻿#region netDxf library, Copyright (C) 2009-2019 Daniel Carvajal (haplokuon@gmail.com)
 
 //                        netDxf library
-// Copyright (C) 2009-2018 Daniel Carvajal (haplokuon@gmail.com)
+// Copyright (C) 2009-2019 Daniel Carvajal (haplokuon@gmail.com)
 // 
 // This library is free software; you can redistribute it and/or
 // modify it under the terms of the GNU Lesser General Public
@@ -262,6 +262,22 @@ namespace netDxf.Tables
         #endregion
 
         #region public properties
+
+        /// <summary>
+        /// Defines if the line type is defined by layer.
+        /// </summary>
+        public bool IsByLayer
+        {
+            get { return this.Name.Equals(ByLayerName, StringComparison.InvariantCultureIgnoreCase); }
+        }
+
+        /// <summary>
+        /// Defines if the line type is defined by block.
+        /// </summary>
+        public bool IsByBlock
+        {
+            get { return this.Name.Equals(ByBlockName, StringComparison.InvariantCultureIgnoreCase); }
+        }
 
         /// <summary>
         /// Gets or sets the line type description.
